# fake-space

./: .gitignore  Cargo.toml  README.md  algorithm.md
map/: map1.txt
maps/: config.txt  hall_turn.txt  l_turn.txt  l_turn_extended.txt  large1.txt  main.txt  map.txt  map1.txt  new_syntax.txt  room.txt  root.txt  segment.txt  start.txt  straight.txt  t_turn.txt  world.txt  world_with_comments.txt
res/: glass.xcf
src/: app.rs  canvas.rs  colors.rs  control.rs  cube.rs  dbg.rs  hud.rs  main.rs  map.rs  model.rs  models.rs  object.rs  player.rs  raycaster.rs  state.rs  textures.rs  utils.rs  voxel.rs  window.rs  world.rs
src/backend/: ctx.rs  debug.rs  gfx.rs  mod.rs
src/basic_raycaster/: mod.rs  platform.rs  platforms.rs  ray.rs  wall.rs
src/canvas/: gfx.rs  mod.rs
src/config_parser/: error.rs  mod.rs  parse_error.rs  parser.rs  segment_parser.rs  tests.rs
src/draw/: floor_ceiling.rs  mod.rs  object.rs  sprites.rs  top_bottom.rs  transparent.rs  void.rs  voxel_model.rs  wall.rs
src/map/: blueprint.rs  map_parser.rs  mod.rs  parse_error.rs  parser.rs  portal.rs  room.rs  segment.rs  tests.rs  tilemap.rs
src/map_parser/: blueprint.rs  error.rs  mod.rs  parser.rs  segment.rs  tests.rs
src/old_raycaster/: mod.rs  platforms.rs  skybox.rs  wall.rs
src/parser/: mod.rs  tests.rs
src/player/: camera.rs  controller.rs  mod.rs  physics.rs
src/raycaster/: camera.rs  mod.rs  object.rs  platform.rs  platforms.rs  ray.rs  skybox.rs  wall.rs
src/render/: background.rs  camera.rs  ceiling.rs  column.rs  floor.rs  floor_ceiling.rs  mod.rs  object.rs  platforms.rs  ray.rs  renderer.rs  skybox.rs  top_bottom.rs  transparent.rs  void.rs  voxel_model.rs  wall.rs
src/shaders/: shader.wgsl
src/world/: map.rs  mod.rs  (+5 more)
tiled/: tileset.tsx
tiled_map/: map.tmx  set.xcf  test1.tiled-session  tileset.tsx
(+20 files in other folders)
