[package]
name = "false_space"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "0.20.0"
winit = "0.30.0"
wgpu_text = "0.8.8"

pollster = "0.3.0"
bytemuck = { version = "1.16.0", features = [ "derive" ] }
glam = "0.27.0"
image = "0.25.1"
hashbrown = "0.14.5"
rand = "0.8.5"
strum = { version = "0.26.2", features = ["derive"] }
nom = "7.1.3"
dot_vox = "5.1.1"
rayon = "1.10.0"

log = "0.4.21"
env_logger = "0.11.3"

[profile.flamegraph]
inherits = "release"
debug = true

[profile.flamegraph_no_inline]
inherits = "release"
debug = true
opt-level=0
