[package]
name = "false_space"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "23.0.0"
winit = "0.30.5"
wgpu_text = "0.9.1"
bevy = "0.14.2"

pollster = "0.4.0"
bytemuck = { version = "1.19.0", features = [ "derive" ] }
glam = "0.29.1"
image = "0.25.4"
hashbrown = "0.15.0"
rand = "0.8.5"
strum = { version = "0.26.3", features = ["derive"] }
nom = "7.1.3"
dot_vox = "5.1.1"
rayon = "1.10.0"

log = "0.4.22"
env_logger = "0.11.5"

[profile.flamegraph]
inherits = "release"
debug = true

[profile.flamegraph_no_inline]
inherits = "release"
debug = true
opt-level=0
