[package]
name = "false_space"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "23.0.1"
winit = "0.30.7"
wgpu_text = "0.9.1"

pollster = "0.4.0"
bytemuck = { version = "1.21.0", features = [ "derive" ] }
glam = "0.29.2"
image = "0.25.5"
hashbrown = "0.15.2"
rand = "0.8.5"
strum = { version = "0.26.3", features = ["derive"] }
nom = "7.1.3"
dot_vox = "5.1.1"
rayon = "1.10.0"

log = "0.4.22"
env_logger = "0.11.6"

[profile.flamegraph]
inherits = "release"
debug = true

[profile.flamegraph_no_inline]
inherits = "release"
debug = true
opt-level=0
